rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-42.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
locales: ~
name: ~
navigation:
  allow_printing: false
  can_regenerate: false
  confirm_when_leaving: false
  on_leave: "template:template_key"
  show_names_of_question_groups: false
  show_steps: false
  show_title_page: false
  start_password: "file:path/to/file"
timing:
  duration_in_seconds: none
  allow_pause: "template:template_key"
  on_timeout:
    action: warn
    message:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  timed_warning:
    action: warn
    message:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
feedback:
  percentage_needed_to_pass: ~
  show_name_of_student: false
  show_current_marks: false
  show_maximum_marks: false
  show_answer_state: false
  allow_reveal_answer: false
  review: "template:template_key"
  advice: "file:path/to/file"
  intro: "file:path/to/file"
  feedback_messages:
    - message: nonjmetext§
      threshold: nonjmetext§
    - message: "template:template_key"
      threshold: "template:template_key"
    - message:
        template_key: template_key
        default_value: ~
      threshold:
        template_key: template_key
        default_value: ~
    - message: ~
      threshold: ~
    - "template:template_key"
    - template_key: template_key
      default_value: ~
question_groups: ~
numbas_settings:
  theme: "template:template_key"
diagnostic:
  script:
    custom:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  objectives:
    template_key: template_key
    default_value: ~
  topics:
    template_key: template_key
    default_value: ~

